<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>third_challenge_natsume</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amsl@aa.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roomba_500driver_meiji</depend>
  <depend>image_geometry</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
